--- a/css/main_style.css
+++ b/css/main_style.css
@@ -45,7 +45,7 @@ span {
 
 .section1 .img-main-digibar {
   min-height: 100px;
-  background-image: url("../img/main-digibar.png");
+  background-image: url("../img/main/main-digibar.png");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -116,7 +116,7 @@ span {
   max-width: 1920px;
   height: 1080px;
   padding: 0;
-  background-image: url("../img/main-bgi.png");
+  background-image: url("../img/main/main-bgi.png");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -132,7 +132,7 @@ span {
   max-width: 255px;
   height: 360px;
   border-radius: 20px;
-  background-image: url("../img/main-btn.png");
+  background-image: url("../img/main/main-btn-Shal.png");
   background-position: center;
   background-repeat: no-repeat;
 }
