modify index, 沙崙線
1. 調整跑馬燈, 疊圖
2. class

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -30,9 +30,28 @@
   text-shadow: 1px 1px 5px #000;
 }
 
+.index1 .img-index-mg {
+  margin-top: 140px;
+  position: absolute;
+  z-index: 1;
+}
+
+.index1 .marquee {
+  margin-top: 145px;
+  width: 740px;
+  position: absolute;
+  left: 31px;
+  z-index: 2;
+  overflow: hidden;
+}
+
 .index2 {
   min-height: 100vh;
   padding: 100px 0;
   text-align: center;
+}
+
+.index2 .col-2 img {
+  border-radius: 21px;
 }
 /*# sourceMappingURL=index_style.css.map */
