--- a/css/main_style.css
+++ b/css/main_style.css
@@ -36,39 +36,23 @@ span {
 }
 
 .section1 .img-main-digibar {
-  min-height: 100px;
-  background-image: url("../img/main/main-digibar.png");
-  background-position: center;
-  background-repeat: no-repeat;
+  position: absolute;
+  z-index: 1;
 }
 
 .section1 .marquee {
-  height: 80px;
-  -webkit-animation: marquee 20s linear 1s infinite normal;
-          animation: marquee 20s linear 1s infinite normal;
-}
-
-@-webkit-keyframes marquee {
-  0% {
-    background-position: 0;
-  }
-  100% {
-    background-position: -2600px;
-  }
-}
-
-@keyframes marquee {
-  0% {
-    background-position: 0;
-  }
-  100% {
-    background-position: -2600px;
-  }
+  margin-top: 10px;
+  width: 828px;
+  position: absolute;
+  left: 19px;
+  z-index: 2;
+  overflow: hidden;
 }
 
 .section1 .localweather {
   min-width: 80px;
   min-height: 80px;
+  z-index: 3;
 }
 
 .section1 .localtime {
@@ -80,6 +64,7 @@ span {
       -ms-grid-row-align: center;
       align-self: center;
   letter-spacing: 3px;
+  z-index: 3;
 }
 
 .section1 .img-main-map {
@@ -123,20 +108,14 @@ span {
 
 .section2 .img-main-line {
   margin-top: 133px;
-  max-width: 1110px;
-  width: 100%;
-  min-height: 140px;
-  height: 100%;
-  background-image: url("../img/Shal/main-Shal-line.png");
-  background-position: bottom;
-  background-repeat: no-repeat;
+  position: absolute;
+  z-index: 1;
 }
 
 .section2 .img-main-train {
-  margin-top: -20px;
-  max-width: 850px;
-  width: 100%;
-  max-height: 130px;
+  margin-top: 114px;
+  position: absolute;
+  z-index: 2;
 }
 
 .img-main-bgi {
@@ -154,38 +133,8 @@ span {
   text-align: center;
 }
 
-.section6 .img-main-btn {
-  border-radius: 20px;
-}
-
-.section6 .img-btn-Neiw:hover,
-.section6 .img-btn-Neiw:active {
-  background-image: url("../img/main/main-btn-Neiwh.png");
-}
-
-.section6 .img-btn-Liuj:hover,
-.section6 .img-btn-Liuj:active {
-  background-image: url("../img/main/main-btn-Liujh.png");
-}
-
-.section6 .img-btn-Jiji:hover,
-.section6 .img-btn-Jiji:active {
-  background-image: url("../img/main/main-btn-Jijih.png");
-}
-
-.section6 .img-btn-Shal:hover,
-.section6 .img-btn-Shal:active {
-  background-image: url("../img/main/main-btn-Shalh.png");
-}
-
-.section6 .img-btn-Shen:hover,
-.section6 .img-btn-Shen:active {
-  background-image: url("../img/main/main-btn-Shenh.png");
-}
-
-.section6 .img-btn-Ping:hover,
-.section6 .img-btn-Ping:active {
-  background-image: url("../img/main/main-btn-Pingh.png");
+.section6 .img-main-btn img {
+  border-radius: 21px;
 }
 
 .swiper-container {
