--- a/css/Shal_style.scss
+++ b/css/Shal_style.scss
@@ -10,11 +10,11 @@ $Shal-color: #5EC324;
 $Shen-color: #0071BC;
 $Ping-color: #93278F;
 
-$font-size-content-m: 16px;
-$font-size-content-l: 29px;
-$font-size-content-time: 46px;
-$font-size-content-h2: 47px;
-$font-size-content-h1: 76px;
+$font-size-content-m: 1rem; // 16px
+$font-size-content-l: 1.8125rem; // 29px
+$font-size-content-time: 2.875rem; // 46px
+$font-size-content-h2: 2.9375rem; // 47px
+$font-size-content-h1: 4.75rem; // 76px
 
 $web-font: 'Noto Sans TC',
 sans-serif;
@@ -24,74 +24,67 @@ monospace;
 // 版型A
 .section3 {
     min-height: 100vh;
-    padding: 100px 0;
-    text-align: center;
+    padding-top: 6.25rem;
+    padding-bottom: 6.25rem;
 
-    img {
-        width: 100%;
-    }
     // 滿版圖片
-    .img-Shal-chime01 {
-        margin-top: 75px;
+    .row:nth-child(2) {
+        margin-top: 4.6875rem;
     }
 
     // 滿版內文
     .text-Shal-chime01 {
-        margin-top: 75px;
-        letter-spacing: 7px;
-        line-height: 1.6em;
+        margin-top: 4.6875rem;
+        letter-spacing: 0.4rem;
+        line-height: 3.15rem;
     }
 }
 
 // 版型B
 .section4 {
     min-height: 100vh;
-    padding: 100px 0;
-    text-align: center;
+    padding-top: 6.25rem;
+    padding-bottom: 6.25rem;
 
     // 滿版圖片
-    .img-Shal-chime02 {
-        // max-width: 1110px;
-        min-height: 880px;
-        height: 100%;
-        background-image: url('../img/Shal/Shal-chime02.jpg');
-        background-position: center;
-        background-repeat: no-repeat;
+    img {
+        position: absolute;
+        z-index: 1;
     }
 
     // 置中4欄位內文
-    .text-Shal-chime02 {
+    p {
         font-size: $font-size-content-m;
         color: #fff;
-        letter-spacing: 2px;
-        line-height: 1.7em;
+        letter-spacing: 0.21rem;
+        line-height: 1.85rem;
         text-shadow: 1px 1px 5px #000;
+        position: absolute;
+        z-index: 2;
+        top: 16.5625rem;
+        left: 23.125rem;
     }
 }
 
 // 版型C
 .section5 {
     min-height: 100vh;
-    padding: 100px 0;
-    text-align: center;
-
-    img {
-        width: 100%;
-    }
+    padding-top: 6.25rem;
+    padding-bottom: 6.25rem;
 
     // 4欄位兩行標題
-    .img-Shal-cjcuTitle02 {
-        margin-top: 40px;
+    .col-4>div:nth-child(2) {
+        margin-top: 2.5rem;
     }
 
     // 6欄位內文
-    .text-Shal-cjcu01 {
-        letter-spacing: 6px;
-        line-height: 1.6em;
+    p {
+        letter-spacing: 0.4rem;
+        line-height: 3.15rem;
     }
 
     // 滿版圖片
-    .img-Shal-cjcu01 {
-        margin-top: 80px;
+    .row:nth-child(2) {
+        margin-top: 5rem;
     }
 }
