--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,16 +1,16 @@
 body {
   font-family: "Noto Sans TC", sans-serif;
   font-weight: normal;
-  font-size: 29px;
+  font-size: 1.8125rem;
 }
 
 nav {
   background-color: #4D4D4D;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 nav a {
-  letter-spacing: 6px;
+  letter-spacing: 0.6rem;
 }
 
 nav a:hover {
@@ -25,14 +25,10 @@ span {
   color: #FF7E1E;
 }
 
-.custom-row-mx-15 {
-  margin: 0 15px;
-}
-
 .section1 {
   min-height: 100vh;
-  padding: 100px 0;
-  text-align: center;
+  padding-top: 6.25rem;
+  padding-bottom: 6.25rem;
 }
 
 .section1 .img-main-digibar {
@@ -41,96 +37,83 @@ span {
 }
 
 .section1 .marquee {
-  margin-top: 10px;
+  margin: 0.63rem 0;
   width: 828px;
   position: absolute;
-  left: 19px;
   z-index: 2;
+  left: 19px;
   overflow: hidden;
 }
 
 .section1 .localweather {
-  min-width: 80px;
-  min-height: 80px;
+  padding: 0.597rem 0.469rem;
   z-index: 3;
 }
 
 .section1 .localtime {
   font-family: "Share Tech Mono", monospace;
-  font-size: 46px;
+  font-size: 2.875rem;
   color: #FFC10E;
-  text-align: left;
+  letter-spacing: 0.1rem;
+  padding: 0 0.66rem;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  letter-spacing: 3px;
   z-index: 3;
 }
 
-.section1 .img-main-map {
-  margin-top: 112px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.section1 .row:nth-child(2) {
+  margin: 7rem 0;
 }
 
-.section1 .img-main-map p {
+.section1 .row:nth-child(2) p {
+  font-size: 4.75rem;
   font-weight: bold;
-  font-size: 76px;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
-  letter-spacing: 10px;
+  letter-spacing: 0.625rem;
   position: absolute;
 }
 
 .section2 {
-  min-height: 100%;
-  padding: 100px 0;
-  text-align: center;
+  min-height: 100vh;
+  padding-top: 6.25rem;
+  padding-bottom: 6.25rem;
 }
 
 .section2 .text-main-cotent {
-  margin-top: 40px;
-  letter-spacing: 7px;
-  line-height: 1.6em;
+  margin-top: 2.5rem;
+  letter-spacing: 0.4375rem;
+  line-height: 3.15rem;
 }
 
-.section2 .img-main-km {
-  margin-top: 150px;
-  max-width: 445px;
-  width: 100%;
-  max-height: 105px;
+.section2 .row:nth-child(3) {
+  margin-top: 9.375rem;
 }
 
 .section2 .img-main-line {
-  margin-top: 133px;
+  margin-top: 8.125rem;
   position: absolute;
   z-index: 1;
 }
 
 .section2 .img-main-train {
-  margin-top: 114px;
+  margin-top: 6.9375rem;
   position: absolute;
   z-index: 2;
+  margin-left: 8.13rem;
+  margin-right: 8.13rem;
 }
 
 .img-main-bgi {
-  max-width: 1920px;
-  height: 1080px;
   background-image: url("../img/main/main-bgi.png");
-  background-position: bottom;
+  background-position: center bottom;
   background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .section6 {
-  min-height: 50vh;
-  padding: 150px 0 100px 0;
-  text-align: center;
+  padding: 9.375rem 0 6.25rem 0;
 }
 
 .section6 .img-main-btn img {
@@ -144,7 +127,7 @@ span {
 
 .swiper-slide {
   text-align: center;
-  font-size: 16px;
+  font-size: 1rem;
   background: #fff;
   /* Center slide text vertically */
   display: -webkit-box;
@@ -164,19 +147,17 @@ span {
 }
 
 footer {
-  min-height: 200px;
-  padding: 90px 0;
   background-color: #4D4D4D;
+  font-size: 1rem;
   color: rgba(255, 255, 255, 0.7);
-  font-size: 16px;
 }
 
 footer div {
-  padding: 15px;
+  padding-top: 5.5rem;
+  padding-bottom: 5.5rem;
 }
 
 footer div p {
-  margin-bottom: 0;
-  letter-spacing: 5px;
+  letter-spacing: 0.3rem;
 }
 /*# sourceMappingURL=main_style.css.map */
